// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`navigates back 1`] = `
.c0 {
  box-sizing: border-box;
  cursor: pointer;
  background: lightgrey;
  border: none;
  border-radius: 0.25rem;
  padding: 0.4rem 0.7rem;
  color: black;
  line-height: 1;
  white-space: nowrap;
}

<button
  class="c0"
  type="button"
>
  Go Back
</button>
`;

exports[`navigates to page 1`] = `
.c0 {
  box-sizing: border-box;
  cursor: pointer;
  background: lightgrey;
  border: none;
  border-radius: 0.25rem;
  padding: 0.4rem 0.7rem;
  color: black;
  line-height: 1;
  white-space: nowrap;
}

<button
  class="c0"
  type="button"
>
  Go Home
</button>
`;

exports[`renders LinkButton with onClick and disabled props 1`] = `
.c0 {
  box-sizing: border-box;
  cursor: pointer;
  background: lightgrey;
  border: none;
  border-radius: 0.25rem;
  padding: 0.4rem 0.7rem;
  color: darkgrey;
  line-height: 1;
  white-space: nowrap;
}

<button
  class="c0"
  disabled=""
  type="button"
>
  Push Me
</button>
`;

exports[`renders LinkButton with onClick prop 1`] = `
.c0 {
  box-sizing: border-box;
  cursor: pointer;
  background: lightgrey;
  border: none;
  border-radius: 0.25rem;
  padding: 0.4rem 0.7rem;
  color: black;
  line-height: 1;
  white-space: nowrap;
}

<button
  class="c0"
  type="button"
>
  Push Me
</button>
`;
